--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "webinar-2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://erdemkeren.github.io/udacity-reactnd-shifting-state",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
@@ -12,7 +14,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write 'src/*.js'"
+    "format": "prettier --write 'src/*.js'",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
